<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_5sdp"
    android:background="@drawable/bg_card_edit">

    <TextView
        android:id="@+id/tvExitTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/MainTextThemeBoldTextColor"
        android:gravity="center"
        android:text="@string/exit_app"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExitTextTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        style="@style/MainTextThemeMediumTextColor"
        android:gravity="center"
        android:text="@string/are_you_sure_want_to_exit_app"
        android:textColor="@color/textColorGrayLight"
        android:includeFontPadding="false"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitTextTitle" />

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_btn_blue"
        android:gravity="center"
        style="@style/MainTextThemeSemiBoldTextColor"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/rate_app"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitTextTitle1" />

    <TextView
        android:id="@+id/tvQuit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        style="@style/MainTextThemeSemiBoldTextColor"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_35sdp"
        android:text="@string/yes_exit"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShare" />
</androidx.constraintlayout.widget.ConstraintLayout>