<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_view"
    tools:context=".ui.dialog.BsAddFolderDialog">


    <TextView
        android:id="@+id/tvTop"
        style="@style/MainTextThemeMediumTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/new_album"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFolderName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:background="@drawable/rounded_edittext_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical|start"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/add_folder"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorGrayLight"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTop" />

    <TextView
        android:id="@+id/btnCancel"
        style="@style/MainTextThemeMediumTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/cancel"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOk" />


    <TextView
        android:id="@+id/btnOk"
        style="@style/MainTextThemeMediumTextColor"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>