<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.activity.PrivacyActivity">

    <ImageView
        android:id="@+id/ivPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvWelcome"
        style="@style/MainTextThemeRegularTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPrivacy" />


    <TextView
        android:id="@+id/tvApp"
        style="@style/MainTextThemeRegularTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvMsgWelcome"
        style="@style/MainTextThemeRegularTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="start"
        android:singleLine="false"
        android:text="@string/msg_welcome"
        android:textColor="#9191A1"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/bg_view"
        app:layout_constraintBottom_toTopOf="@+id/tvPrivacyTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMsgWelcome">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MainTextThemeRegularTextColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.02"
                        android:id="@+id/tvTitle"
                        android:paddingTop="@dimen/_10sdp"
                        android:singleLine="false"
                        android:text="@string/permission_note_title"
                        android:textColor="#c9cfdb"
                        android:textSize="@dimen/_14ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/MainTextThemeRegularTextColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="start|top"
                        android:letterSpacing="0.02"
                        android:paddingBottom="@dimen/_10sdp"
                        android:scrollbars="vertical"
                        android:singleLine="false"
                        android:text="@string/permission_note_desc_new"
                        android:textColor="#c9cfdb"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrivacyTerms"
        style="@style/MainTextThemeRegularTextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="start"
        android:singleLine="false"
        android:text="@string/agree_privacy_and_terms"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnAgree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/btnAgree"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@drawable/bg_btn_blue"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnDisagree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvConfirm"
            style="@style/MainTextThemeMediumTextColor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/agree_continue"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


    <TextView
        android:id="@+id/btnDisagree"
        style="@style/MainTextThemeMediumTextColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_btn_gray"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/disagree"
        android:textColor="#9191A1"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>