<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_view"
    tools:context=".ui.dialog.HideLoadingDialog">

    <TextView
        android:id="@+id/tvTop"
        style="@style/MainTextThemeMediumTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/processing"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivIcon"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_loading_lock"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTop" />


    <TextView
        android:id="@+id/tvMsg"
        style="@style/MainTextThemeRegularTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/msg_rm_media_from_storage"
        android:textColor="@color/textColorGrayLight"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIcon" />


    <TextView
        android:id="@+id/btnOk"
        style="@style/MainTextThemeMediumTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_btn_gray"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/ok"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMsg" />


</androidx.constraintlayout.widget.ConstraintLayout>